--- a/inst/doc/vignette.bib
+++ b/inst/doc/vignette.bib
@@ -1,13 +1,13 @@
-@Book{Ven02,
-    title = {Modern Applied Statistics with S},
-    author = {W. N. Venables and B. D. Ripley},
-    publisher = {Springer},
-    edition = {Fourth},
-    address = {New York},
-    year = {2002},
-    note = {ISBN 0-387-95457-0},
-    url = {http://www.stats.ox.ac.uk/pub/MASS4}
-  }
+@book{Ven02,
+ author = {Venables, W. N. and Ripley, Brian D.},
+ year = {2002},
+ title = {Modern applied statistics with S},
+ url = {http://catdir.loc.gov/catdir/toc/fy042/2002022925.html},
+ address = {New York},
+ edition = {4},
+ publisher = {Springer},
+ isbn = {0-387-95457-0}
+}
 
 @Article{Box88,
 author = {Box, G.E.P., Bisgard, S. and Fung, C. A.},
@@ -18,38 +18,34 @@ OPTvolume = {4},
 OPTnumber = {2}
 }
 
-  @Book{Box05,
-    title = {Statistics for Experimenters},
-    author = {Box, George E. P., Hunter, J. Stuart and Hunter, William G.},
-    publisher = {Wiley},
-    edition = {Second},
-    address = {New Jersey},
-    year = {2005},
-    note = {ISBN 0-471-71813-0}
-  }
+@book{Box05,
+ author = {Box, George E. P. and Hunter, J. Stuart and Hunter, William G.},
+ year = {2005},
+ title = {Statistics for Experimenters},
+ address = {Hoboken, New Jersey},
+ edition = {2nd edition.},
+ publisher = {John Wiley {\&} Sons and Wiley-Interscience},
+ isbn = {0-471-71813-0}
+}
 
-  @Book{Cor02,
-    title = {Experiments with Mixtures: Designs, Models, and the Analysis of Mixture Data},
-    author = {Cornell, John},
-    publisher = {Wiley},
-    edition = {Third},
-    address = {New York},
-    year = {2002},
-    note = {ISBN-10: 0-471-39367-3}
-  }
+@book{Cor02,
+ author = {Cornell, John A.},
+ year = {op. 2002},
+ title = {Experiments with mixtures: Designs, models, and the analysis of mixture data},
+ address = {New York},
+ edition = {3rd},
+ publisher = {John Wiley},
+ isbn = {0-471-39367-3}
+}
 
-@Article{Der80,
-author = {Derringer, George and Suich, Ronald},
-title = {Simultaneous Optimization of Several Response Variables},
-journal = {Journal of Quality Technology},
-year = {1980},
-OPTkey = {•},
-OPTvolume = {12},
-OPTnumber = {4},
-OPTpages = {214-219},
-OPTmonth = {•},
-OPTnote = {•},
-OPTannote = {•}
+
+@article{Derringer.1980,
+ author = {Derringer, George and Suich, Ronald},
+ year = {1980},
+ title = {Simulaneous Optimization of Several Response Variables},
+ volume = {12},
+ number = {4},
+ journal = {Journal of Quality Technology}
 }
 
 @Manual{DIN05, title = {ISO 9000:2005. Quality Management Systems - Fundamentals and vocabulary},
@@ -58,8 +54,95 @@ ISO/TC 176},
 OPTyear = {2005}
 }
 
-
 @Manual{DIN07,
 title = {ISO 21747:2006. Statistical Methods - Process performance and capability statistics for measured quality characteristics},
 OPTorganization = {Technical Committee ISO/TC 69}, OPTyear = {2007}}
+
+@book{Montgomery.2006,
+ author = {Montgomery, Douglas C and Runger, George C.},
+ year = {2006},
+ title = {Applied statistics and probability for engineers},
+ address = {New York},
+ edition = {3rd},
+ publisher = {Wiley},
+ isbn = {0471735566}
+}
+
+@book{MSA.2010,
+ year = {2010},
+ title = {Measurement systems analysis product code msa-4},
+ address = {[S.l.]},
+ publisher = {Automotive Industry},
+ isbn = {9781605342115}
+}
+
+@book{Dietrich.2007,
+ author = {Dietrich, Edgar and Schulze, Alfred},
+ year = {2007},
+ title = {Eignungsnachweis von Pr{\"u}fprozessen: Pr{\"u}fmittelf{\"a}higkeit und Messunsicherheit im aktuellen Normenumfeld},
+ url = {http://deposit.ddb.de/cgi-bin/dokserv?id=2801514&prov=M&dok_var=1&dok_ext=htm},
+ address = {M{\"u}nchen [u.a.]},
+ edition = {3., aktualisierte und erw},
+ publisher = {Hanser},
+ isbn = {3446407324}
+}
+
+
+@book{Dietrich.2008,
+ author = {Dietrich, Edgar},
+ year = {2008},
+ title = {Eignungsnachweis von Messsystemen},
+ url = {http://d-nb.info/991222970/04},
+ address = {M{\"u}nchen},
+ edition = {3., aktualisierte Aufl.},
+ publisher = {Hanser},
+ isbn = {9783446417472}
+}
+
+@book{Mittag.1999,
+ author = {Mittag, H.-J and Rinne, H.},
+ year = {1999},
+ title = {Prozessf{\"a}higkeitsmessung f{\"u}r die industrielle Praxis},
+ address = {M{\"u}nchen},
+ publisher = {Hanser},
+ isbn = {9783446211179}
+}
+
+@book{Kotz.1998,
+ author = {Kotz, Samuel and Lovelace, Cynthia R.},
+ year = {1998},
+ title = {Process capability indices in theory and practice},
+ url = {http://catdir.loc.gov/catdir/enhancements/fy0638/98232699-d.html},
+ address = {London ;, New York},
+ publisher = {Arnold},
+ isbn = {0340691778}
+}
+
+
+@book{Chambers.2008,
+ author = {Chambers, John M.},
+ year = {2008},
+ title = {Software for data analysis},
+ address = {New York, London},
+ publisher = {Springer},
+ isbn = {978-0-387-75935-7}
+}
+
+@book{Vardeman.1999,
+ author = {Vardeman, Stephen B. and Jobe, J. Marcus},
+ year = {1999},
+ title = {Statistical quality assurance methods for engineers},
+ url = {http://catdir.loc.gov/catdir/description/wiley031/98023685.html},
+ address = {New York},
+ publisher = {John Wiley},
+ isbn = {0471159379}
+}
+
+
+
+
+
+
+
+
 
