--- a/inst/doc/qualityTools.rnw
+++ b/inst/doc/qualityTools.rnw
@@ -1042,7 +1042,7 @@ sessionInfo()
 All of the R-Code used in this vignette can be found in the RCode.R file.
 
 <<echo=FALSE, results=hide,split=TRUE>>= 
-Stangle(file="qualityTools.rnw", output="RCode.R", annotate=FALSE) 
+Stangle(file="qualityTools.rnw", output="RCode.r", annotate=FALSE) 
 @ 
 
 
