--- a/inst/doc/vignette.bib
+++ b/inst/doc/vignette.bib
@@ -9,15 +9,6 @@
  isbn = {0-387-95457-0}
 }
 
-@Article{Box88,
-author = {Box, G.E.P., Bisgard, S. and Fung, C. A.},
-title = {An explanation and critique of taguchi's contributions to quality engineering},
-journal = {Quality and Reliability Engineering International},
-year = {1988},
-OPTvolume = {4},
-OPTnumber = {2}
-}
-
 @book{Box05,
  author = {Box, George E. P. and Hunter, J. Stuart and Hunter, William G.},
  year = {2005},
@@ -38,7 +29,6 @@ OPTnumber = {2}
  isbn = {0-471-39367-3}
 }
 
-
 @article{Derringer.1980,
  author = {Derringer, George and Suich, Ronald},
  year = {1980},
@@ -48,16 +38,6 @@ OPTnumber = {2}
  journal = {Journal of Quality Technology}
 }
 
-@Manual{DIN05, title = {ISO 9000:2005. Quality Management Systems - Fundamentals and vocabulary},
-OPTorganization = {Technical Committee
-ISO/TC 176},
-OPTyear = {2005}
-}
-
-@Manual{DIN07,
-title = {ISO 21747:2006. Statistical Methods - Process performance and capability statistics for measured quality characteristics},
-OPTorganization = {Technical Committee ISO/TC 69}, OPTyear = {2007}}
-
 @book{Montgomery.2006,
  author = {Montgomery, Douglas C and Runger, George C.},
  year = {2006},
@@ -66,14 +46,6 @@ OPTorganization = {Technical Committee ISO/TC 69}, OPTyear = {2007}}
  edition = {3rd},
  publisher = {Wiley},
  isbn = {0471735566}
-}
-
-@book{MSA.2010,
- year = {2010},
- title = {Measurement systems analysis product code msa-4},
- address = {[S.l.]},
- publisher = {Automotive Industry},
- isbn = {9781605342115}
 }
 
 @book{Dietrich.2007,
@@ -138,10 +110,32 @@ OPTorganization = {Technical Committee ISO/TC 69}, OPTyear = {2007}}
  isbn = {0471159379}
 }
 
+@book{MSA.2010,
+ year = {2010},
+ title = {Measurement systems analysis product code msa-4},
+ address = {[S.l.]},
+ publisher = {Automotive Industry},
+ isbn = {9781605342115}
+}
 
+@Manual{DIN05, title = {ISO 9000:2005. Quality Management Systems - Fundamentals and vocabulary},
+OPTorganization = {Technical Committee
+ISO/TC 176},
+OPTyear = {2005}
+}
 
+@Manual{DIN07,
+title = {ISO 21747:2006. Statistical Methods - Process performance and capability statistics for measured quality characteristics},
+OPTorganization = {Technical Committee ISO/TC 69}, OPTyear = {2007}}
 
-
+@article{Box88,
+author = {Box G.E.P., Bisgard S., Fung C.},     
+title = {An explanation and critique of taguchi's contributions to quality engineering},
+journal = {Quality and Reliability Engineering International},
+year = {1988},
+volume = {4},
+number = {2}
+}
 
 
 
