--- a/inst/doc/vignette.bib
+++ b/inst/doc/vignette.bib
@@ -1,3 +1,17 @@
+@book{DAgostino.1986,
+ author = {D'Agostino, Ralph B. and Stephens, Michael A.},
+ year = {1986},
+ title = {{G}oodness-of-fit techniques},
+ address = {New York},
+ publisher = {M. Dekker},
+ isbn = {0-8247-7487-6}
+}
+
+@article{Stephens.,
+ author = {Stephens, Michael A.},
+ title = {{G}oodness of {F}it, {A}nderson-{D}arling {T}est of}
+}
+
 @book{Ven02,
  author = {Venables, W. N. and Ripley, Brian D.},
  year = {2002},
@@ -118,15 +132,21 @@
  isbn = {9781605342115}
 }
 
-@Manual{DIN05, title = {ISO 9000:2005. Quality Management Systems - Fundamentals and vocabulary},
-OPTorganization = {Technical Committee
-ISO/TC 176},
-OPTyear = {2005}
+@MISC{ISO9000,
+key = "ISO 9000",
+type = "Norm",
+number = "ISO 9000",
+year = "2005",
+title = "Quality management systems -- Fundamentals and vocabulary"
 }
 
-@Manual{DIN07,
-title = {ISO 21747:2006. Statistical Methods - Process performance and capability statistics for measured quality characteristics},
-OPTorganization = {Technical Committee ISO/TC 69}, OPTyear = {2007}}
+@MISC{ISO9001,
+key = "ISO 9001",
+type = "Norm",
+number = "ISO 9001",
+year = "2008",
+title = "Quality management systems -- Requirements"
+}
 
 @article{Box88,
 author = {Box G.E.P., Bisgard S., Fung C.},     
@@ -137,6 +157,53 @@ volume = {4},
 number = {2}
 }
 
+@MISC{ISO22514-1,
+key = "ISO 22514-1",
+type = "Norm",
+number = "ISO 22514-1",
+year = "2009",
+title = "Statistical methods in process management -- Capability and performance -- Part 1: General principles and concepts"
+}
+
+@MISC{ISO22514-3,
+key = "ISO 22514-3",
+type = "Norm",
+number = "ISO 22514-3",
+year = "2008",
+title = "Statistical methods in process management -- Capability and performance -- Part 3: Machine performance studies for measured data on discrete parts"
+}
+
+@MISC{ISO22514-4,
+key = "ISO/TR 22514-4",
+type = "Norm",
+number = "ISO/TR 22514-4",
+year = "2007",
+title = "Statistical methods in process management -- Capability and performance -- Part 4: Process capability estimates and performance"
+}
+
+@MISC{ISO21747,
+key = "ISO 21747",
+type = "Norm",
+number = "ISO 21747",
+year = "2006",
+title = "Statistical methods -- Process performance and capability statistics for measured quality characteristics"
+}
+
+@MISC{ISO29901,
+key = "ISO/TR 29901",
+type = "Norm",
+number = "ISO/TR 29901",
+year = "2007",
+title = "Selected illustrations of full factorial experiments with four factors"
+}
+
+@MISC{ISO12845,
+key = "ISO/TR 12845",
+type = "Norm",
+number = "ISO/TR 12845",
+year = "2010",
+title = "Selected illustrations of fractional factorial screening experiments"
+}
 
 
 
